<resources>
    <string name="app_name">JajanJalan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_valid_email_address">Enter valid email address</string>
    <string name="enter_valid_password">Your password must be at least 8 character in length</string>
    <string name="password">Password</string>
    <string name="email_address">Email</string>
    <string name="hello_welcome">Welcome, Back!</string>
    <string name="logo">Login Ilustration</string>
    <string name="register_here">Register here</string>
    <string name="have_an_account">"Do you have an account? "</string>
    <string name="create_account">Create an Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="register_name">Name</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="first_slide_title">Hallo Selamat Datang\nDi Jajan Jalan</string>
    <string name="second_slide_title">"Nikmati kemudahan temukan Jajanan favorit diseikitar Anda  "</string>
    <string name="third_slide_title">Ayo coba sekarang jelajahi jajanan kuliner dengan Aplikasi</string>
    <string name="register_succeed">Register Succeed!</string>
    <string name="continue_login">Continue Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_empty">All fields must be filled in</string>
    <string name="ok">Ok</string>
    <string name="register_password_not_match">Your confirm password not match!</string>
    <string name="Home">Home</string>
    <string name="Favorite">Favorite</string>
    <string name="Chat">Chat</string>
    <string name="Profile">Profile</string>
    <string name="or">Or</string>
    <string name="login_with_google">Login With Google</string>
    <string name="login">Login</string>
    <string name="register">Register Now</string>
    <string name="register_with_google">Register With Google</string>
    <string name="profil_resto">profil_resto</string>
    <string name="buttton_back">buttton_back</string>
    <string name="button_favorite">button_favorite</string>
    <string name="name_warung">Name_Warung</string>
    <string name="ulasan">Ulasan</string>
    <string name="menu">Daftar Menu</string>
    <string name="daftarmenu">Lihat daftar Menu</string>
    <string name="lihat_lokasi">Lihat Lokasi</string>
    <string name="tombol_favorite">tombol_favorite</string>
    <string name="btn_favorite">tombol Favorite</string>
    <string name="button_location">button_location</string>
    <string name="bahasa">Bahasa</string>
    <string name="pusat_bantuan">Pusat Bantuan</string>
    <string name="notification">Notifikasi</string>
    <string name="button_notifikasi">button_notifikasi</string>
    <string name="button_bahasa">button_bahasa</string>
    <string name="button_pusat_bantuan">button_pusat_bantuan</string>
    <string name="button_ratting_aplikasi">button_ratting_aplikasi</string>
    <string name="nilai_apikasi">Beri Penilaian Apikasi</string>
    <string name="logout">Logout</string>
    <string name="username">Ujang Laksamana</string>
    <string name="email">ujanglaksamana@gmail.com</string>
</resources>