<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="288dp"
            android:layout_height="233dp"
            android:src="@drawable/app_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_24sdp"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_welcome"
            android:textColor="@color/blue"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_16sdp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_email"
            android:layout_width="match_parent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginVertical="@dimen/_16sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:boxStrokeColor="@color/blue"
            app:startIconDrawable="@drawable/ic_email"
            android:outlineAmbientShadowColor="@color/blue"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome">

            <com.bangkit.jajanjalan.util.customview.EmailCustomView
                android:id="@+id/ed_login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_address"
                android:layout_gravity="start"
                android:fontFamily="@font/roboto"
                android:inputType="textEmailAddress"
                android:layout_marginTop="@dimen/_24sdp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginVertical="@dimen/_16sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:boxStrokeColor="@color/blue"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_password"
            android:outlineAmbientShadowColor="@color/blue"
            app:layout_constraintTop_toBottomOf="@id/tl_email">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/roboto"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_8sdp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/roboto"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tl_password" />

        <LinearLayout
            android:id="@+id/linear_info_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_24sdp"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_an_account"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:gravity="center_horizontal"
                android:text="@string/register_here"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>