<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="228dp"
            android:layout_height="233dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/il_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginVertical="@dimen/_16sdp"
            android:layout_marginTop="32dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:outlineAmbientShadowColor="@color/blue"
            app:boxStrokeColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
            app:startIconDrawable="@drawable/ic_person">

            <EditText
                android:id="@+id/ed_register_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/roboto"
                android:hint="@string/register_name"
                android:inputType="textPersonName"
                android:paddingHorizontal="@dimen/_8sdp"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginVertical="@dimen/_16sdp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:outlineAmbientShadowColor="@color/blue"
            app:boxStrokeColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_name"
            app:startIconDrawable="@drawable/ic_email">

            <com.bangkit.jajanjalan.util.customview.EmailCustomView
                android:id="@+id/ed_register_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/roboto"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/_8sdp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginVertical="@dimen/_16sdp"
            android:outlineAmbientShadowColor="@color/blue"
            app:boxStrokeColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_email"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_password">

            <EditText
                android:id="@+id/ed_register_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/roboto"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_8sdp"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginVertical="@dimen/_16sdp"
            android:outlineAmbientShadowColor="@color/blue"
            app:boxStrokeColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_password"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_password">

            <EditText
                android:id="@+id/ed_register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/roboto"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_8sdp"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/roboto"
            android:text="@string/register_now"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_confirm_password" />

        <LinearLayout
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            app:layout_constraintBottom_toTopOf="@id/btn_register_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                app:dividerColor="@color/grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:fontFamily="@font/roboto"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                app:dividerColor="@color/grey" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register_google"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="48dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/roboto"
            android:text="@string/register_with_google"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:icon="@drawable/ic_google"
            app:iconGravity="textStart"
            app:iconTintMode="multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            app:strokeColor="@color/blue"
            app:strokeWidth="1dp" />

        <LinearLayout
            android:id="@+id/linear_info_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/btn_register_google">

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:gravity="center_horizontal"
                android:text="@string/login_now"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
